--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -590,8 +590,10 @@ header ul li a:hover{
     background: #f6f6f6;
     transition: .3s;
 }
+@media(min-width:992px){
 .progect .container .box:hover{
     transform: scale(1.1);
+}
 }
 .progect .container .box:first-of-type:hover{
     margin-right: 15px;
