--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,6 +14,22 @@ body{
     padding-left:15px ;
     max-width: 100%;
 }
+/* start scrollbar */
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #17141430;
+    border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color:#00000091;
+}
+::-webkit-scrollbar-track{
+    background-color: #ffffff9e;
+    box-shadow:0 0 10px #b5abab inset;
+}
+/* end scrollbar */
 
 @media(min-width:768px){
     .container{
